// Vitest Snapshot v1

exports[`Cell > :props > align 1`] = `
<div
  class="t-cell t-cell--top t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > align 2`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > align 3`] = `
<div
  class="t-cell t-cell--bottom t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > arrow 1`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="t-cell__right-icon"
  >
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
  </div>
</div>
`;

exports[`Cell > :props > bordered 1`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > description 1`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > description 2`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > hover 1`] = `
<div
  class="t-cell t-cell--middle t-cell--hover t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > image 1`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    
    <div>
      text
    </div>
    
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > image 2`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    
    <img
      class="t-cell__image"
      src="text"
    />
    
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > leftIcon 1`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <div>
      text
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > leftIcon 2`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    text
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > note 1`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="t-cell__note"
  >
    <div>
      text
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`Cell > :props > note 2`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="t-cell__note"
  >
    text
  </div>
  <!--v-if-->
</div>
`;

exports[`Cell > :props > required 1`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > rightIcon 1`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="t-cell__right-icon"
  >
    <div>
      text
    </div>
  </div>
</div>
`;

exports[`Cell > :props > rightIcon 2`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="t-cell__right-icon"
  >
    text
  </div>
</div>
`;

exports[`Cell > :props > title 1`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="t-cell__title"
  >
    <div>
      text
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Cell > :props > title 2`] = `
<div
  class="t-cell t-cell--middle t-cell--bordered"
>
  <div
    class="t-cell__left-icon"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="t-cell__title"
  >
    text
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;
